--- a/package.json
+++ b/package.json
@@ -66,7 +66,11 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@actions/exec": "^1.1.1",
+    "@actions/glob": "^0.4.0",
+    "@actions/http-client": "^2.2.0",
+    "@actions/io": "^1.1.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
