--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     "@actions/exec": "^1.1.1",
     "@actions/glob": "^0.4.0",
     "@actions/http-client": "^2.2.0",
-    "@actions/io": "^1.1.3"
+    "@actions/io": "^1.1.3",
+    "@actions/tool-cache": "^2.0.1",
+    "simple-git": "^3.22.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
