--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,33 +30,11 @@ jobs:
         id: npm-ci
         run: npm ci
 
-      - name: Check Format
-        id: npm-format-check
-        run: npm run format:check
-
-      - name: Lint
-        id: npm-lint
-        run: npm run lint
+      - name: Build
+        run: npm run build
 
       - name: Test
-        id: npm-ci-test
-        run: npm run ci-test
+        run: npm run test
 
-  test-action:
-    name: GitHub Actions Test
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@v4
-
-      - name: Test Local Action
-        id: test-action
-        uses: ./
-        with:
-          dir: ./__tests__/vendordeps
-
-      - name: Print Output
-        id: output
-        run: echo "${{ steps.test-action.outputs.time }}"
+      - name: Check Format
+        run: npm run format:check
